--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/jest": "^29.2.3",
         "@types/node": "^18.11.9",
         "emailjs-com": "^3.2.0",
+        "jquery": "^3.6.1",
         "octokit": "^2.0.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -27,6 +28,7 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@types/jquery": "^3.5.14",
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
         "@types/react-lottie": "^1.2.6",
